--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
+body{
+    background-color: #9a9ca0;
+}
 /* Full Header Styles */
 .header {
     background-color: #1f2937;
-    height: 500px;
+    height: 600px;
 
     color: #f9faf8;
     padding: 30px 60px;
@@ -81,7 +85,7 @@
     color: #f9faf8;
     font-size: 16px;
     border: none;
-    margin-top: 10px;
+    margin-top: 0px;
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
